--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.233.0",
     "next": "13.4.4",
     "nodemon": "^2.0.22",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-image-file-resizer": "^0.4.8",
