--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@aws-sdk/client-s3": "^3.363.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@stripe/stripe-js": "^1.54.0",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1410.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "class-variance-authority": "^0.6.0",
@@ -35,6 +37,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-player": "^2.12.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
