--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-player": "^2.12.0",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
