--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.3.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "faker": "^6.6.6",
@@ -37,8 +38,9 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-player": "^2.12.0",
-    "react-select": "^5.7.3",
     "react-quill": "^2.0.0",
+    "react-select": "^5.7.3",
+    "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
