--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.18.2",
     "faker": "^6.6.6",
     "http-proxy-middleware": "^2.0.6",
+    "javascript-time-ago": "^2.5.9",
     "lucide-react": "^0.233.0",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "nodemon": "^2.0.22",
     "postcss": "8.4.24",
@@ -40,8 +42,9 @@
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.3",
-    "react-super-responsive-table": "^5.2.1",
     "react-social-login-buttons": "^3.9.1",
+    "react-super-responsive-table": "^5.2.1",
+    "react-time-ago": "^7.2.1",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
