added call to action sticky bar to the top when scroll down; added Course Review below course detail description.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "faker": "^6.6.6",
+    "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
     "javascript-time-ago": "^2.5.9",
     "lucide-react": "^0.233.0",
