--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@aws-sdk/client-s3": "^3.363.0",
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@stripe/stripe-js": "^1.54.0",
     "antd": "^5.6.1",
@@ -27,15 +28,22 @@
     "faker": "^6.6.6",
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
+    "i18next": "^23.4.5",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "javascript-time-ago": "^2.5.9",
     "lucide-react": "^0.233.0",
     "moment": "^2.29.4",
+    "negotiator": "^0.6.3",
     "next": "13.4.4",
+    "next-i18next": "^14.0.0",
+    "next-intl": "^2.20.0",
     "nodemon": "^2.0.22",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.0",
     "react-icons": "^4.9.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading-skeleton": "^3.3.1",
