--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "faker": "^6.6.6",
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
-    "i18next": "^23.4.5",
+    "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "javascript-time-ago": "^2.5.9",
@@ -42,8 +42,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^13.2.0",
+    "react-i18next": "^13.2.1",
     "react-icons": "^4.9.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading-skeleton": "^3.3.1",
@@ -55,6 +56,7 @@
     "react-super-responsive-table": "^5.2.1",
     "react-time-ago": "^7.2.1",
     "react-toastify": "^9.1.3",
+    "react-world-flags": "^1.5.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5"
