--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@formatjs/intl-localematcher": "^0.4.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@stripe/stripe-js": "^1.54.0",
+    "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1410.0",
@@ -25,7 +26,6 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^23.4.6",
